Duokex commuincations for adding product added.
Still buggy.

--- a/AngularSignalR/AngularSignalR/Web.config
+++ b/AngularSignalR/AngularSignalR/Web.config
@@ -10,7 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
 
   <appSettings>
-    <add key="owin:AutomaticAppStartup" value="false"/>
+    <add key="owin:AutomaticAppStartup" value="true"/>
   </appSettings>
   
   <connectionStrings>
