--- a/AngularSignalR/AngularSignalR/AngularSignalR.csproj
+++ b/AngularSignalR/AngularSignalR/AngularSignalR.csproj
@@ -147,6 +147,7 @@
     <Content Include="Web\js\directives.js" />
     <Content Include="Web\js\filters.js" />
     <Content Include="Web\js\flickr.js" />
+    <Content Include="Web\js\hubProxy.js" />
     <Content Include="Web\js\lib\angular\angular-animate.js" />
     <Content Include="Web\js\lib\angular\angular-animate.min.js" />
     <Content Include="Web\js\lib\angular\angular-cookies.js" />
